--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   ],
   "author": "GitHub",
   "license": "CC0-1.0",
-  "devDependencies": {
-    "electron": "2.0.0-beta.3"
+  "dependencies": {
+    "electron": "2.0.7",
+    "electron-widevinecdm": "5.0.2"
   }
 }
