--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "dependencies": {
-    "electron": "5.0.0-beta.6",
-    "electron-widevinecdm": "5.0.2"
+    "electron": "6.0.0-beta.6"
   }
 }
